fix: Pretty console, filter out pointless errors, death beam of doom needs work i think